linux/k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress
  namespace: nginx-dev

spec:
  ingressClassName: nginx

  rules:
    - host: ajaypulapa-nginx.centralindia.cloudapp.azure.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: nginx-web-service

                port:
                  number: 80
